# rayrender

./: .Rbuildignore  .Renviron  .gitattributes  .gitignore  404.html  AGENT.md  CNAME  CODE_OF_CONDUCT.html  CONTRIBUTING.html  CONTRIBUTING.md  DESCRIPTION  LICENSE  NAMESPACE  README.Rmd  README.md  _pkgdown.yml  authors.html  build_gh_pages_rayrender.R  cleanup  cleanup.win  configure  configure.ac  configure.win  cran_build.R  index.html  pkgdown.yml  rayrender.Rproj  sitemap.xml
.codex:/: config.toml
.github/workflows/: R-CMD-check.yaml  check-standard.yaml  pkgdown.yaml  render-benchmarks.yml
R/: RcppExports.R  add_object.R  add_sphere.R  animate_objects.R  catch-routine-registration.R  convert_color.R  create_instance.R  create_instances.R  csg_construct.R  flipfunctions.R  generate_camera_motion.R  generate_cornell.R  generate_ground.R  generate_studio.R  group_objects.R  has_denoiser.R  materials.R  objects.R  pig.R  plot_map.R  post_process_frame.R  post_process_scene.R  prepare_scene_list.R  process_scene.R  quick_render_scene.R  r_obj.R  ray_animated_transform.R  ray_material.R  ray_scene.R  ray_shape_info.R  ray_transform.R  rayballerrcpp.R  raynextweekrcpp.R  rayrenderrcpp.R  rayweekendrcpp.R  render_animation.R  render_ao.R  render_preview.R  render_scene.R  runcode.R  (+7 more)
data/: latest.json  render_benchmarks.csv  render_benchmarks.rds
inst/: COPYRIGHTS
inst/extdata/: 3d_r_logo.txt  3d_r_logo_mat.txt  dgauss.50mm.txt  fisheye.10mm.txt  r_obj.txt  telephoto.250mm.txt  wide.22mm.txt
inst/testdata/: test-object_image_sums.txt
man/: RotateAxis.Rd  RotateX.Rd  RotateY.Rd  RotateZ.Rd  add_object.Rd  add_points_polygon.Rd  add_sphere.Rd  animate_objects.Rd  arrow.Rd  bezier_curve.Rd  box.Rd  calculate_control_points.Rd  calculate_control_points_straight.Rd  calculate_distance_along_bezier_curve.Rd  calculate_final_path.Rd  calculate_final_twist.Rd  check_image_texture.Rd  clamp.Rd  cone.Rd  convert_color.Rd  create_instances.Rd  cross_prod.Rd  csg_box.Rd  csg_capsule.Rd  csg_combine.Rd  csg_cone.Rd  csg_cylinder.Rd  csg_ellipsoid.Rd  csg_elongate.Rd  csg_group.Rd  csg_object.Rd  csg_onion.Rd  csg_plane.Rd  csg_pyramid.Rd  csg_rotate.Rd  csg_round.Rd  csg_rounded_cone.Rd  csg_scale.Rd  csg_sphere.Rd  csg_torus.Rd  (+83 more)
reference/: RotateAxis.html  RotateX.html  RotateY.html  RotateZ.html  add_object.html  add_points_polygon.html  animate_objects.html  arrow.html  bezier_curve.html  calculate_control_points.html  calculate_control_points_straight.html  calculate_distance_along_bezier_curve.html  calculate_final_path.html  calculate_final_twist.html  check_image_texture.html  clamp.html  cone.html  convert_color.html  create_instances.html  cross_prod.html  csg_box.html  csg_capsule.html  csg_combine.html  csg_cone.html  csg_cylinder.html  csg_ellipsoid.html  csg_elongate.html  csg_group.html  csg_object.html  csg_onion.html  csg_plane.html  csg_pyramid.html  csg_rotate.html  csg_round.html  csg_rounded_cone.html  csg_scale.html  csg_sphere.html  csg_torus.html  csg_translate.html  csg_triangle.html  (+77 more)
site/: index.html
site/assets/: dashboard.js  style.css
site/data/: latest.json  render_benchmarks.csv
src/: Makevars  Makevars.in  Makevars.win  Makevars.win.in  PreviewDisplay.cpp  PreviewDisplay.h  PrintClassSizes.cpp  RayMatrix.cpp  RayMatrix.h  RcppExports.cpp  aabb.cpp  aabb.h  adaptivesampler.cpp  adaptivesampler.h  animatedtransform.cpp  animatedtransform.h  assert.cpp  assert.h  bounds.cpp  bounds.h  box.cpp  box.h  buildscene.cpp  buildscene.h  bvh.cpp  bvh.h  bvh_node.cpp  bvh_node.h  calcnormals.cpp  calcnormals.h  calctangents.cpp  camera.cpp  camera.h  color.cpp  color.h  cone.cpp  cone.h  constant.cpp  constant.h  csg.cpp  (+108 more)
src/core/: PreviewDisplay.cpp  PreviewDisplay.h  adaptivesampler.cpp  adaptivesampler.h  buildscene.cpp  buildscene.h  bvh.cpp  bvh.h  camera.cpp  camera.h  color.cpp  color.h  integrator.cpp  integrator.h  ray.h
src/ext/: common_defs.h
src/hitables/: box.cpp  box.h  csg.cpp  csg.h  curve.cpp  curve.h  cylinder.cpp  cylinder.h  disk.cpp  disk.h  ellipsoid.cpp  ellipsoid.h  hitable.cpp  hitable.h  hitablelist.cpp  hitablelist.h  infinite_area_light.cpp  infinite_area_light.h  instance.cpp  instance.h  mesh3d.cpp  mesh3d.h  plymesh.cpp  plymesh.h  raymesh.cpp  raymesh.h  rectangle.cpp  rectangle.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  trianglemesh.cpp  trianglemesh.h  trimesh.cpp  trimesh.h
src/materials/: constant.cpp  constant.h  material.cpp  material.h  microfacetdist.cpp  microfacetdist.h  texture.cpp  texture.h  texturecache.cpp  texturecache.h
src/math/: RayMatrix.cpp  RayMatrix.h  aabb.cpp  aabb.h  animatedtransform.cpp  animatedtransform.h  bounds.cpp  bounds.h  calcnormals.cpp  calctangents.cpp  calctangents.h  displacement.cpp  displacement.h  distributions.cpp  distributions.h  efloat.h  filter.cpp  filter.h  float.h  interval.h  loopsubdiv.cpp  loopsubdiv.h  math.cpp  math.h  mathinline.h  matrix.cpp  matrix.h  noise.cpp  noise.h  normal.h  onbh.h  pdf.cpp  pdf.h  perlin.cpp  perlin.h  point2.h  point3.h  quaternion.cpp  quaternion.h  rng.cpp  (+15 more)
src/nanovdb/: NanoVDB.h
src/pbrt/: bsdf.cpp  bsdf.h  bsdfs_test.cpp  bssrdf.cpp  bssrdf.h  bxdfs.cpp  bxdfs.h  cameras.cpp  cameras.h  film.cpp  film.h  filters.cpp  filters.h  filters_test.cpp  interaction.cpp  interaction.h  lights.cpp  lights.h  lights_test.cpp  lightsamplers.cpp  lightsamplers.h  lightsamplers_test.cpp  materials.cpp  materials.h  media.cpp  media.h  media_test.cpp  options.cpp  options.h  paramdict.cpp  paramdict.h  parser.cpp  parser.h  parser_test.cpp  pbrt.cpp  ray.cpp  ray.h  samplers.cpp  samplers.h  samplers_test.cpp  (+7 more)
src/pcg/: pcg_extras.hpp
src/stb/: stb_image.h  stb_image_write.h
src/tinyobj/: earcut.hpp  tiny_obj_loader.h  tinyexr.h
src/utils/: assert.cpp  debug.cpp  debug.h  raylog.cpp  raylog.h
tests/: testthat.R
tests/testthat/: test-basic-rendering.R  test-consistent-rendering.R  test-cpp.R  test-integrator.R  test-objects.R  (+3 more)
tools/: benchmark-csg-suite.R  benchmark-csg.R  config.R  remove_stderr.R  search-replace.R
(+314 files in other folders)
